Update to platformio 6 libs

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
-env_default = mini
+default_envs = mini
+
+[env]
+lib_deps =
+  arduino-libraries/LiquidCrystal @ ^1.0.7
 
 [env:uno]
 platform = atmelavr
