Use source filter for different variants also more stuff in common [env]

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,20 +8,23 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
-default_envs = mini
+default_envs = mini-cc
 
 [env]
+platform = atmelavr
+framework = arduino
 lib_deps =
   arduino-libraries/LiquidCrystal @ ^1.0.7
+upload_port = /dev/ttyUSB0
 
 [env:uno]
-platform = atmelavr
 board = uno
-framework = arduino
 upload_port = /dev/ttyACM1
 
-[env:mini]
-platform = atmelavr
+[env:mini-cc]
 board = pro16MHzatmega328
-framework = arduino
-upload_port = /dev/ttyUSB0
+build_src_filter = +<cc-display.cpp>
+
+[env:mini-led-battery]
+board = pro16MHzatmega328
+build_src_filter = +<led-battery.cpp>
