Add tec controller env with DS18B20

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,11 +19,19 @@ upload_port = /dev/ttyUSB0
 
 [env:uno]
 board = uno
-upload_port = /dev/ttyACM1
+upload_port = /dev/ttyACM0
 
 [env:mini-cc]
 board = pro16MHzatmega328
 build_src_filter = +<cc-display.cpp>
+
+[env:tec-controller]
+board = pro16MHzatmega328
+build_src_filter = +<tec-control.cpp>
+lib_deps =
+  milesburton/DallasTemperature @ ^3.11.0
+  OneWireNoResistor=https://github.com/bigjosh/OneWireNoResistor#1.0
+lib_ignore = OneWire ;needed so it does not pull it as dependency of DallasTemperature
 
 [env:mini-led-battery]
 board = pro16MHzatmega328
