Improve temp display and clean up Serial

--- a/platformio.ini
+++ b/platformio.ini
@@ -29,6 +29,7 @@ build_src_filter = +<cc-display.cpp>
 board = pro16MHzatmega328
 build_src_filter = +<tec-control.cpp>
 lib_deps =
+  ${env.lib_deps}
   milesburton/DallasTemperature @ ^3.11.0
   OneWireNoResistor=https://github.com/bigjosh/OneWireNoResistor#1.0
 lib_ignore = OneWire ;needed so it does not pull it as dependency of DallasTemperature
