--- a/platformio.ini
+++ b/platformio.ini
@@ -30,6 +30,7 @@ board = pro16MHzatmega328
 build_src_filter = +<tec-control.cpp>
 lib_deps =
   ${env.lib_deps}
+  dlloydev/QuickPID@^3.1.2
   milesburton/DallasTemperature @ ^3.11.0
   OneWireNoResistor=https://github.com/bigjosh/OneWireNoResistor#1.0
 lib_ignore = OneWire ;needed so it does not pull it as dependency of DallasTemperature
