250 kbaud for serial monitor

--- a/platformio.ini
+++ b/platformio.ini
@@ -6,7 +6,8 @@
 ;   Advanced options: extra scripting
 ;
 ; Please visit documentation for the other options and examples
-; http://docs.platformio.org/page/projectconf.html
+; https://docs.platformio.org/page/projectconf.html
+
 [platformio]
 default_envs = mini-cc
 
@@ -16,6 +17,7 @@ framework = arduino
 lib_deps =
   arduino-libraries/LiquidCrystal @ ^1.0.7
 upload_port = /dev/ttyUSB0
+monitor_speed = 250000
 
 [env:uno]
 board = uno
